炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas

procedure XComboBox_SetButtonSize (hEle:Integer;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XComboBox_SetDropHeight (hEle:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XComboBox_GetDropHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XComboBox_BindApapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XComboBox_GetApapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XComboBox_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar);stdcall;far; external 'xcgui.dll';
procedure XComboBox_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar);stdcall;far; external 'xcgui.dll';
procedure XComboBox_EnableDrawButton (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XComboBox_EnableEdit (hEle:Integer;bEdit:LongBool);stdcall;far; external 'xcgui.dll';
procedure XComboBox_EnableDropHeightFixed (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XComboBox_AddBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XComboBox_AddBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XComboBox_AddBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XComboboX_GetBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XComboBox_ClearBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XComboBox_GetSelItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XComboBox_GetState (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XAd_Destroy (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XAdListView_Create () : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_AddItemText (hAdapter:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_AddItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_AddItemImage (hAdapter:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_AddItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_SetText (hAdapter:Integer;iGroup:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_SetTextEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_SetImage (hAdapter:Integer;iGroup:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_SetImageEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_GetCount (hAdapter:Integer;iGroup:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_AddItemText (hAdapter:Integer;iGroup:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_AddItemTextEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_AddItemImage (hAdapter:Integer;iGroup:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_AddItemImageEx (hAdapter:Integer;iGroup:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_SetText (hAdapter:Integer;iGroup:Integer;iItem:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_SetTextEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_SetImage (hAdapter:Integer;iGroup:Integer;iItem:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_SetImageEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Group_DeleteItem (hAdapter:Integer;iGroup:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdListView_Group_DeleteAllChildItem (hAdapter:Integer;iGroup:Integer);stdcall;far; external 'xcgui.dll';
function XAdListView_Item_DeleteItem (hAdapter:Integer;iGroup:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdListView_DeleteAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdListView_DeleteAllGroup (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdListView_DeleteAllItem (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdListView_DeleteColumnGroup (hAdapter:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdListView_DeleteColumnItem (hAdapter:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
function XAdListView_Item_GetTextEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdListView_Item_GetImageEx (hAdapter:Integer;iGroup:Integer;iItem:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_Create () : Integer;stdcall;far; external 'xcgui.dll';
procedure XAdTable_Sort (hAdapter:Integer;iColumn:Integer;bAscending:LongBool);stdcall;far; external 'xcgui.dll';
procedure XAdTable_GetItemDataType (hAdapter:Integer;iItem:Integer;iColumn:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdTable_GetItemDataTypeEx (hAdapter:Integer;iItem:Integer;pName:PWideChar);stdcall;far; external 'xcgui.dll';
function XAdTable_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_SetColumn (hAdapter:Integer;pColName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_AddItemText (hAdapter:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_AddItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_AddItemImage (hAdapter:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_AddItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_InsertItemText (hAdapter:Integer;iItem:Integer;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_InsertItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_InsertItemImage (hAdapter:Integer;iItem:Integer;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_InsertItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemText (hAdapter:Integer;iItem:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemInt (hAdapter:Integer;iItem:Integer;iColumn:Integer;nValue:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemIntEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;nValue:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemFloat (hAdapter:Integer;iItem:Integer;iColumn:Integer;nValue:Single) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemFloatEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;nValue:Single) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemImage (hAdapter:Integer;iItem:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_SetItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_DeleteItem (hAdapter:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_DeleteItemEx (hAdapter:Integer;iItem:Integer;nCount:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XAdTable_DeleteItemAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XAdTable_DeleteColumnAll (hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XAdTable_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_GetCountColumn (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemText (hAdapter:Integer;iItem:Integer;iColumn:Integer;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemTextEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pOut:PWideChar;nOutLen:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemImage (hAdapter:Integer;iItem:Integer;iColumn:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemImageEx (hAdapter:Integer;iItem:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemInt (hAdapter:Integer;iItem:Integer;iColumn:Integer;pOutValue:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemIntEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pOutValue:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemFloat (hAdapter:Integer;iItem:Integer;iColumn:Integer;pOutValue:Single) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTable_GetItemFloatEx (hAdapter:Integer;iItem:Integer;pName:PWideChar;pOutValue:Single) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTree_Create () : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_AddColumn (hAdapter:Integer;pName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_SetColumn (hAdapter:Integer;pColName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_InsertItemText (hAdapter:Integer;pValue:PWideChar;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_InsertItemTextEx (hAdapter:Integer;pName:PWideChar;pValue:PWideChar;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_InsertItemImage (hAdapter:Integer;hImage:Integer;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_InsertItemImageEx (hAdapter:Integer;pName:PWideChar;hImage:Integer;nParentID:Integer;insertID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_GetCount (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_GetCountColumn (hAdapter:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XAdTree_SetItemText (hAdapter:Integer;nID:Integer;iColumn:Integer;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTree_SetItemTextEx (hAdapter:Integer;nID:Integer;pName:PWideChar;pValue:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XAdTree_SetItemImage (hAdapter:Integer;nID:Integer;iColumn:Integer;hImage:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
